@@ -25,7 +25,9 @@ OPTS=$(getopt \
   -l 'daemon' \
   -l 'helper:' \
   -l 'host_type:' \
+  -l 'cluster_snapshot' \
   -l 'debug' \
+  -l 'logconsole' \
   -- "$@")
 
 eval set -- "$OPTS"
@@ -33,13 +35,19 @@ eval set -- "$OPTS"
 RUN_DAEMON=0
 HELPER=
 HOST_TYPE=
+CLUSTER_SNAPSHOT=
 ENABLE_DEBUGGER=0
+RUN_LOG_CONSOLE=${SYS_LOG_TO_CONSOLE:-0}
+# min jdk version required
+MIN_JDK_VERSION=11
 while true; do
     case "$1" in
         --daemon) RUN_DAEMON=1 ; shift ;;
         --helper) HELPER=$2 ; shift 2 ;;
         --host_type) HOST_TYPE=$2 ; shift 2 ;;
+        --cluster_snapshot) CLUSTER_SNAPSHOT="-cluster_snapshot" ; shift ;;
         --debug) ENABLE_DEBUGGER=1 ; shift ;;
+        --logconsole) RUN_LOG_CONSOLE=1 ; shift ;;
         --) shift ;  break ;;
         *) echo "Internal error" ; exit 1 ;;
     esac
@@ -52,15 +60,15 @@ export DORIS_HOME="$STARROCKS_HOME"
 
 source $STARROCKS_HOME/bin/common.sh
 
+check_and_update_max_processes
+
 # export env variables from fe.conf
 #
 # JAVA_OPTS
 # LOG_DIR
 # PID_DIR
-export JAVA_OPTS="-Xmx1024m"
 export LOG_DIR="$STARROCKS_HOME/log"
 export PID_DIR=`cd "$curdir"; pwd`
-
 export_env_from_conf $STARROCKS_HOME/conf/fe.conf
 
 if [ -e $STARROCKS_HOME/conf/hadoop_env.sh ]; then
@@ -68,59 +76,121 @@ if [ -e $STARROCKS_HOME/conf/hadoop_env.sh ]; then
 fi
 
 # java
-if [ "$JAVA_HOME" = "" ]; then
-  echo "Error: JAVA_HOME is not set."
-  exit 1
-fi
-
-# cannot be jre
-if [ ! -f "$JAVA_HOME/bin/javac" ]; then
-  echo "Error: JAVA_HOME can not be jre"
-  exit 1
+if [[ -z ${JAVA_HOME} ]]; then
+    if command -v javac &> /dev/null; then
+        export JAVA_HOME="$(dirname $(dirname $(readlink -f $(which javac))))"
+        echo "Infered JAVA_HOME=$JAVA_HOME"
+    elif command -v java &> /dev/null; then
+        export JAVA_HOME="$(dirname $(dirname $(readlink -f $(which java))))"
+    else
+      cat << EOF
+Error: The environment variable JAVA_HOME is not set, and neither JDK or JRE is found.
+The FE program requires JDK/JRE version $MIN_JDK_VERSION  or higher in order to run.
+Please take the following steps to resolve this issue:
+1. Install OpenJDK $MIN_JDK_VERSION or higher using your Linux distribution's package manager,
+   or following the openjdk installation instructions at https://openjdk.org/install/
+2. Set the JAVA_HOME environment variable to point to your installed OpenJDK directory.
+   For example:
+   export JAVA_HOME=/usr/lib/jvm/java-$MIN_JDK_VERSION
+3. Try running this script again.
+Note: If you are using a JRE environment, you should set your JAVA_HOME to your JRE directory.
+For full development tools, JDK is recommended.
+EOF
+      exit 1
+    fi
 fi
 
 JAVA=$JAVA_HOME/bin/java
- 
+
 # check java version and choose correct JAVA_OPTS
 JAVA_VERSION=$(jdk_version)
-final_java_opt=$JAVA_OPTS
-if [[ "$JAVA_VERSION" -gt 8 ]]; then
-    if [ -z "$JAVA_OPTS_FOR_JDK_9" ]; then
-        echo "JAVA_OPTS_FOR_JDK_9 is not set in fe.conf" >> $LOG_DIR/fe.out
-        exit -1
-    fi 
-    final_java_opt=$JAVA_OPTS_FOR_JDK_9
+if [[ "$JAVA_VERSION" -lt $MIN_JDK_VERSION ]]; then
+    echo "Error: JDK $JAVA_VERSION is not supported, please use JDK version $MIN_JDK_VERSION or higher"
+    exit -1
 fi
+
+# ### Things to know about environment variables of JAVA_OPTS, JAVA_OPTS_FOR_JDK_9 and JAVA_OPTS_FOR_JDK_11
+# * It is historic reason and backwards compatibility consideration to have separate JAVA_OPTS
+#   for diffferent versions of JDK, so that when the user upgrades or downgrades the JDK version,
+#   the JAVA_OPTS won't be suddenly broken.
+# * Ideally, the user will only care about the `JAVA_OPTS`, don't set any JAVA_OPTS_FOR_JDK_*
+# * JAVA_OPTS/JAVA_OPTS_FOR_JDK_9/JAVA_OPTS_FOR_JDK_11 can be either set in the shell before invoking
+#   this script, or can be set in `fe.conf` which will be loaded automatically by `export_env_from_conf`
+#
+# ### Precedence of environment variables
+# For JDK11, it takes the following precedences:
+#    JAVA_OPTS_FOR_JDK_11 > JAVA_OPTS_FOR_JDK_9 > JAVA_OPTS
+# (The `JAVA_OPTS_FOR_JDK_9` here is just for historic reason)
+# For JDK9, it takes the following precedences:
+#    JAVA_OPTS_FOR_JDK_9 > JAVA_OPTS
+# For all remain jdk versions, only JAVA_OPTS takes effect.
+#
+# NOTE: try not adding new JAVA_OPTS_FOR_JDK_## for a new JDK version.
+#
+final_java_opt=
+case $JAVA_VERSION in
+  11)
+    # take JAVA_OPTS_FOR_JDK_11 or JAVA_OPTS_FOR_JDK_9 if the former is empty
+    final_java_opt=${JAVA_OPTS_FOR_JDK_11:-$JAVA_OPTS_FOR_JDK_9}
+    final_java_opt=${final_java_opt:-$JAVA_OPTS}
+    ;;
+  9)
+    # take JAVA_OPTS_FOR_JDK_9 or JAVA_OPTS if the former is empty
+    final_java_opt=${JAVA_OPTS_FOR_JDK_9:-$JAVA_OPTS}
+    ;;
+  *)
+    final_java_opt=$JAVA_OPTS
+    ;;
+esac
+
+if [ -z "$final_java_opt" ] ; then
+    # lookup fails, provide a fixed opts with best guess that may or may not work
+    if [ -z "$DATE" ] ; then
+        DATE=`date +%Y%m%d-%H%M%S`
+    fi
+    final_java_opt="-Dlog4j2.formatMsgNoLookups=true -Xmx8192m -XX:+UseG1GC -Xlog:gc*:${LOG_DIR}/fe.gc.log.$DATE:time -Djava.security.policy=${STARROCKS_HOME}/conf/udf_security.policy"
+    echo "JAVA_OPTS is not set in fe.conf, use default java options to start fe process: $final_java_opt"
+fi
+
+# Auto detect jvm -Xmx parameter in case $FE_ENABLE_AUTO_JVM_XMX_DETECT = true
+#  default to 70% of total available mem and can be tuned by env var: FE_JVM_XMX_PERCENTAGE
+# NOTE: the feature is only supported in container env
+xmx=$(detect_jvm_xmx)
+final_java_opt="${final_java_opt} ${xmx}"
 
 if [ ${ENABLE_DEBUGGER} -eq 1 ]; then
     # Allow attaching debuggers to the FE process:
     # https://www.jetbrains.com/help/idea/attaching-to-local-process.html
-    if [[ "$JAVA_VERSION" -gt 8 ]]; then
-        final_java_opt="${final_java_opt} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
-    else
-        final_java_opt="${final_java_opt} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
-    fi
+    final_java_opt="${final_java_opt} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
     echo "Start debugger with: $final_java_opt"
+fi
+
+# add datadog profile settings when enabled
+if [ "${ENABLE_DATADOG_PROFILE}" == "true" ] && [ -f "${STARROCKS_HOME}/datadog/dd-java-agent.jar" ]; then
+    final_java_opt="-javaagent:${STARROCKS_HOME}/datadog/dd-java-agent.jar ${final_java_opt}"
 fi
 
 if [ ! -d $LOG_DIR ]; then
     mkdir -p $LOG_DIR
 fi
 
-echo "using java version $JAVA_VERSION" >> $LOG_DIR/fe.out
-echo $final_java_opt >> $LOG_DIR/fe.out
+read_var_from_conf meta_dir $STARROCKS_HOME/conf/fe.conf
+mkdir -p ${meta_dir:-"$STARROCKS_HOME/meta"}
 
 # add libs to CLASSPATH
 for f in $STARROCKS_HOME/lib/*.jar; do
   CLASSPATH=$f:${CLASSPATH};
 done
-export CLASSPATH=${CLASSPATH}:${STARROCKS_HOME}/lib:${STARROCKS_HOME}/conf
+export CLASSPATH=${STARROCKS_HOME}/lib/starrocks-hadoop-ext.jar:${CLASSPATH}:${STARROCKS_HOME}/lib:${STARROCKS_HOME}/conf
 
 pidfile=$PID_DIR/fe.pid
 
 if [ -f $pidfile ]; then
-  if kill -0 `cat $pidfile` > /dev/null 2>&1; then
-    echo Frontend running as process `cat $pidfile`.  Stop it first.
+  oldpid=$(cat $pidfile)
+  # get the full command
+  pscmd=$(ps -q $oldpid -o cmd=)
+  if echo "$pscmd" | grep -q -w StarRocksFE &>/dev/null ; then
+    echo Frontend running as process $oldpid. Stop it first.
     exit 1
   fi
 fi
@@ -130,8 +200,6 @@ if [ ! -f /bin/limit ]; then
 else
     LIMIT=/bin/limit
 fi
-
-echo `date` >> $LOG_DIR/fe.out
 
 if [ x"$HELPER" != x"" ]; then
     # change it to '-helper' to be compatible with code in Frontend
@@ -143,10 +211,27 @@ if [ x"$HOST_TYPE" != x"" ]; then
     HOST_TYPE="-host_type $HOST_TYPE"
 fi
 
-if [ ${RUN_DAEMON} -eq 1 ]; then
-    nohup $LIMIT $JAVA $final_java_opt com.starrocks.StarRocksFE ${HELPER} ${HOST_TYPE} "$@" >> $LOG_DIR/fe.out 2>&1 </dev/null &
-else
-    $LIMIT $JAVA $final_java_opt com.starrocks.StarRocksFE ${HELPER} ${HOST_TYPE} "$@" >> $LOG_DIR/fe.out 2>&1 </dev/null
-fi
+LOG_FILE=$LOG_DIR/fe.out
 
-echo $! > $pidfile
+if [ ${RUN_LOG_CONSOLE} -eq 1 ] ; then
+    if [ ! -w $STARROCKS_HOME/conf/fe.conf ] ; then
+        # workaround configmap readonly, can't change its content
+        mv $STARROCKS_HOME/conf/fe.conf $STARROCKS_HOME/conf/fe.conf.readonly
+        cp $STARROCKS_HOME/conf/fe.conf.readonly $STARROCKS_HOME/conf/fe.conf
+    fi
+else
+    # redirect all subsequent commands' stdout/stderr into $LOG_FILE
+    exec >> $LOG_FILE 2>&1
+fi
+export SYS_LOG_TO_CONSOLE=${RUN_LOG_CONSOLE}
+
+echo "using java version $JAVA_VERSION"
+echo $final_java_opt
+echo "start time: $(date), server uptime: $(uptime)"
+
+# StarRocksFE java process will write its process id into $pidfile
+if [ ${RUN_DAEMON} -eq 1 ]; then
+    nohup $LIMIT $JAVA $final_java_opt com.starrocks.StarRocksFE ${HELPER} ${HOST_TYPE} ${CLUSTER_SNAPSHOT} "$@" </dev/null &
+else
+    exec $LIMIT $JAVA $final_java_opt com.starrocks.StarRocksFE ${HELPER} ${HOST_TYPE} ${CLUSTER_SNAPSHOT} "$@" </dev/null
+fi
